Mostly working well now

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <script type="text/javascript" src='jquery.js'></script>
   <script type="text/javascript" src='underscore.js'></script>
   <script type="text/javascript" src='year-data.js'></script>
+  <script type="text/javascript" src='gloo-api.js'></script>
   <script type="text/javascript" src='main2.js'></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
