Added most of the good repos, tweaked the date display for fullscreen usage

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,23 @@
   <title>Quick Left on Git</title>
   <script type="text/javascript" src='jquery.js'></script>
   <script type="text/javascript" src='underscore.js'></script>
-  <script type="text/javascript" src='year-data.js'></script>
+  <script type="text/javascript" src='gloo-client.js'></script>
   <script type="text/javascript" src='gloo-api.js'></script>
+  <script type="text/javascript" src='opdemand.js'></script>
+  <script type="text/javascript" src='onthemenu.js'></script>
+  <script type="text/javascript" src='budnitz.js'></script>
+  <script type="text/javascript" src='ngp.js'></script>
+  <script type="text/javascript" src='soundstrue.js'></script>
+  <script type="text/javascript" src='featherheads.js'></script>
+  <script type="text/javascript" src='victor.js'></script>
+  <script type="text/javascript" src='ql.js'></script>
+  <script type="text/javascript" src='health1.js'></script>
+  <script type="text/javascript" src='mmf.js'></script>
   <script type="text/javascript" src='main2.js'></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <h1>Gloo Git</h1>
-  <div id="content">
-
-  </div>
+  <div id="content"></div>
+  <div id="date"></div>
 </body>
 </html>
