Trash cleanup commit

--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,6 @@
 <body>
   <div id="content"></div>
   <div id="date"></div>
+  <div id='desc'>Our code commits for the past year sorted by project. Each Quick Lefter is a unique color, and the transparency of the block indicates the commit's size.</div>
 </body>
 </html>
